[gd_scene load_steps=2 format=2]

[ext_resource path="res://actor_framework/Pivot.gd" type="Script" id=1]

[node name="Pivot" type="Node2D"]
script = ExtResource( 1 )
flags = 51

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
